@@ -934,6 +934,12 @@ attack::attack(display& gui, const gamemap& map,
 				const int defender_side = d_->second.side();
 				fire_event("attack_end");
 				game_events::fire("die",loc,attacker_loc);
+				
+				//WML can invalidate the attacker or defender if it does that abort and invalidate the unit in questoion
+				if(units_.find(attacker_) != a_) a_ = units_.end();
+				if(units_.find(defender_) != d_) d_ = units_.end();
+				if(a_ == units_.end() || d_ == units_.end()) break;
+
 				refresh_bc();
 
 				if(d_ != units_.end() && d_->second.hitpoints() <= 0) {
@@ -1137,6 +1143,12 @@ attack::attack(display& gui, const gamemap& map,
 				const int attacker_side = a_->second.side();
 				fire_event("attack_end");
 				game_events::fire("die",loc,defender_loc);
+
+				//WML can invalidate the attacker or defender if it does that abort and invalidate the unit in questoion
+				if(units_.find(attacker_) != a_) a_ = units_.end();
+				if(units_.find(defender_) != d_) d_ = units_.end();
+				if(a_ == units_.end() || d_ == units_.end()) break;
+
 				refresh_bc();
 
 				if(a_ != units_.end() && a_->second.hitpoints() <= 0) {
